# pydantic-cli-argparse

./: .gitignore  .python-version  README.md  pyproject.toml
examples/: aws_example.py  basic_example.py  hello_world.py  subcommands.py
examples/multiple_apps/: __main__.py  local.py  sagemaker.py
pydantic_argparse/: __init__.py  app.py  core.py  registry.py
